# wire-cell-gen-omp

./: _setup_standalone_init_frontier_omp_amd.sh  _setup_standalone_init_pm_omp_clang.sh  _setup_standalone_init_pm_omp_nvc.sh  my_steps.txt  omp_simple_setup_standalone_lambda1.sh  setup_standalone_lambda1.sh  simple_setup_standalone_frontier_omp_amd.sh  simple_setup_standalone_pm_omp_clang.sh  simple_setup_standalone_pm_omp_nvc.sh
.cmake-omp-amd/: CMakeLists.txt  CMakeLists.txt.standalone
.cmake-omp-cpu/: CMakeLists.txt
.cmake-omp-cpu-nvc/: CMakeLists.txt
.cmake-omp-cuda/: CMakeLists.txt
.cmake-omp-cuda-alpha/: CMakeLists.txt
example/: wct-sim-check.jsonnet  wct-sim.jsonnet
inc/WireCellGenOpenMP/: DepoTransform.h  ImpactData.h  ImpactTransform.h  OpenMPArray_fftw.h
src/: DepoTransform.cxx  ImpactData.cxx  ImpactTransform.cxx
